# MyCppLoggerCopy

./: .gitignore  CMakeLists.txt  Logger.cpp  Logger.hpp  LoggerConfig.cmake.in  LoggerPub.hpp  README.md  critical_error.cpp  critical_error.hpp  exports.hpp  main.cpp  tools.hpp
